# cppGame

./: .gitignore  .kateproject.build  CMakeLists.txt  compile_commands.json
learningResources/: transcript (1).txt  transcript (2).txt  transcript (3).txt  transcript (4).txt  transcript.txt  transcript2.txt
src/: main.cpp
src/gameLayer/: assetManager.cpp  assetManager.h  gameMain.cpp
src/platform/: .main.cpp.kate-swp  asserts.h  main.cpp
